--- a/LeoECS-EventsManager.csproj
+++ b/LeoECS-EventsManager.csproj
@@ -6,6 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-
+<PropertyGroup>
+  <PackageId>LeoECS-EventsManager</PackageId>
+  <Version>1.0.0</Version>
+  <Authors>javisar</Authors>
+  <Company></Company>
+  <Description>LeoECS-EventsManager</Description>
+  <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+</PropertyGroup>
 
 </Project>
