--- a/LeoECS-EventsManager.csproj
+++ b/LeoECS-EventsManager.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,11 +8,16 @@
 
 <PropertyGroup>
   <PackageId>LeoECS-EventsManager</PackageId>
-  <Version>1.0.0</Version>
+  <Version>1.0.1</Version>
   <Authors>javisar</Authors>
   <Company></Company>
   <Description>LeoECS-EventsManager</Description>
-  <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+	<PackageOutputPath>.</PackageOutputPath>
+	<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
 </PropertyGroup>
+
+<ItemGroup>
+  <PackageReference Include="Leopotam.EcsLite" Version="1.0.0" />
+</ItemGroup>
 
 </Project>
